Parser: Fix parseAssignmentStatement expression - now it also parser reassignment (separate reassignment production has been removed from EBNF)